--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f4f7f8;
     display: flex;
@@ -50,4 +50,4 @@ button:hover {
 h3 {
     margin-top: 25px;
     color: #007bff;
-}
+} */
